<?xml version="1.0"?>
<package>
  <name>heron_navigation</name>
  <version>0.4.4</version>
  <description>Autonomous mapping and navigation demos for the Clearpath Heron</description>

  <maintainer email="jakeller3630@gmail.com">Jake Keller</maintainer>


  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>navfn</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>dwa_local_planner</run_depend>

  <export>
  </export>
</package>
